--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url('../assets/grocery-background.jpg') no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -13,7 +13,7 @@ html {
 h1 {
   text-align: center;
   font-size: 90px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: Tahoma, sans-serif;
   color: white;
   -webkit-text-stroke: 2px black;
 }
@@ -23,6 +23,10 @@ h2 {
   font-size: 40px;
   color: white;
   -webkit-text-stroke: 1px black;
+}
+
+s {
+  text-decoration-color: red;
 }
 
 #start {
@@ -65,7 +69,7 @@ h2 {
 
 .mole {
   /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background:url('../assets/carrot.jpg') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
