--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,12 @@ html {
   -o-background-size: cover;
   background-size: cover;
   z-index:0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 h1 {
   text-align: center;
-  font-size: 90px;
+  font-size: 75px;
   font-family: Tahoma, sans-serif;
   color: white;
   -webkit-text-stroke: 2px black;
@@ -25,10 +25,21 @@ h2 {
   -webkit-text-stroke: 1px black;
 }
 
+/*Strikethrough*/
 s {
   text-decoration-color: red;
 }
+/*Style button */
+button {
+  background-color: #008CBA;
+  border-radius: 25%;
+}
 
+/*Footer*/
+footer {
+  text-align: center;
+  font-size: 15px
+}
 #start {
     text-align: center;
     font-size: 30px;
@@ -44,7 +55,7 @@ s {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  /*cursor: url('./assets/mallet.png'), pointer;*/
+  cursor: url('../assets/mallet.png'), pointer;
 }
 
 .hole {
